add query ticket
